<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="200dp">


    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:text="@string/track"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="93dp"
        android:text="@string/artist"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="297dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="141dp"
        android:text="@string/album_name"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="260dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="155dp"
        android:text="@string/date"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/item_track"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="698dp"
        android:layout_toEndOf="@+id/track"
        android:text="@string/empty"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/item_artist"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="647dp"
        android:text="@string/empty"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/item_date"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="244dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="646dp"
        android:text="@string/empty"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/item_album"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="280dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="698dp"
        android:text="@string/empty"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible"/>

</RelativeLayout>